--- a/Topic_25/Task1/MainWindow.xaml
+++ b/Topic_25/Task1/MainWindow.xaml
@@ -13,7 +13,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
         <TextBlock x:Name="textBlockHello" Grid.Row="0"/>
-        <TextBlock x:Name="textBoxEnterName" Grid.Row="1"/>
+        <TextBox x:Name="NameInput" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Margin="0,80,0,0"/>
         <Button x:Name="buttonRun" Content="Сказать имя" Grid.Row="2"/>
 
 
