--- a/Practice25/Task1/MainWindow.xaml
+++ b/Practice25/Task1/MainWindow.xaml
@@ -3,8 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:task1="clr-namespace:Task1"
         Title="MainWindow" Height="350" Width="525">
     <Grid>
-        <TextBlock x:Name="HelloText" HorizontalAlignment="Center" VerticalAlignment="Top" FontSize="24" Margin="0,30,0,0">Hello!</TextBlock>
-        <TextBox x:Name="NameInput" HorizontalAlignment="Center" VerticalAlignment="Top" Width="200" Margin="0,80,0,0"/>
-        <Button Content="Сказать Имя" HorizontalAlignment="Center" VerticalAlignment="Top" Width="100" Margin="0,130,0,0" Click="SayName_Click"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="64*"/>
+            <ColumnDefinition Width="461*"/>
+        </Grid.ColumnDefinitions>
+        <TextBlock x:Name="HelloText" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="24" Margin="167,30,0,0" Grid.Column="1">Hello!</TextBlock>
+        <TextBox x:Name="NameInput" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="98,80,0,0" Grid.Column="1"/>
+        <Button Content="Сказать Имя" HorizontalAlignment="Left" VerticalAlignment="Top" Width="100" Margin="148,130,0,0" Click="SayName_Click" Grid.Column="1"/>
     </Grid>
 </Window>
