--- a/Topic_27/Task1/AddSweetWindow.xaml
+++ b/Topic_27/Task1/AddSweetWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="Task1.AddFlowerWindow"
+﻿<Window x:Class="Task1.AddSweetWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="AddFlowerWindow" Height="200" Width="300">
+        Title="AddSweetWindow" Height="200" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*"/>
@@ -15,27 +15,25 @@
             <ColumnDefinition Width="5*"/>
             <ColumnDefinition Width="5*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock x:Name="textBlockFlowerType"
+        <TextBlock x:Name="textBlockSweetType"
                    Grid.Row="0"
                    Margin="10"
-                   Text="Тип цветка:"
                    VerticalAlignment="Center"
                    HorizontalAlignment="Center"
-                   FontSize="18"/>
-        <TextBox x:Name="textBoxFlowerType"
+                   FontSize="18"><Run Text="Тип "/><Run Language="ru-ru" Text="сладости"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="textBoxSweetType"
                  Margin="10"
                  Grid.Row="0"
                  Grid.Column="1"
                  Height="30"
                  TextAlignment="Center"/>
-        <TextBlock x:Name="textBlockFlowerPrice"
+        <TextBlock x:Name="textBlockSweetPrice"
             Grid.Row="1"
             Margin="10"
-            Text="Цена цветка:"
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
-            FontSize="18"/>
-        <TextBox x:Name="textBoxFlowerPrice"
+            FontSize="18"><Run Text="Цена "/><Run Language="ru-ru" Text="сладости"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="textBoxSweetPrice"
           Margin="10"
           Grid.Row="1"
           Grid.Column="1"
