--- a/Topic_27/Task1/MainWindow.xaml
+++ b/Topic_27/Task1/MainWindow.xaml
@@ -82,15 +82,15 @@
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBox x:Name="textBoxFlowerType"
+                        <TextBox x:Name="textBoxSweetType"
                          Grid.Row="0"
                          Margin="10"/>
                         <Button Content="Найти"
                         Grid.Row="1"
                         Margin="10"
                         FontSize="16"
-                        Click="ButtonFindFlowerType_Click"/>
-                        <TextBox x:Name="textBoxDeleteFlowerType"
+                        Click="ButtonFindSweetType_Click"/>
+                        <TextBox x:Name="textBoxDeleteSweetType"
                          Grid.Row="2"
                          Margin="10"/>
                         <Button Content="Удалить"
